# esme

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  asdasd.npz  environment.yml  esme_calibrate.py  makefile  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  test_snapshotting.py  todo.org  ycoms.pkl
.github/: ISSUE_TEMPLATE.md
docs/: api.md  background.md  checklist.md  hires-espread.md  installation.md  machine-setup.md  new-setup.md  new-setup.org  theory.md  todo.md  todo.org  usage.md
esme/: __init__.py  analysis.py  b2d.py  beam.py  calibration.py  channels.py  cli.py  control.py  core.py  dispersion.py  emem-130MeV.toml  exceptions.py  files.py  i1.py  i1d.py  image.py  injector_channels.py  inout.py  l1.py  l2.py  lattice.py  load.py  maths.py  measurement.py  mint.py  old_mint.py  optics.py  plot.py  scan.toml  sim.py  simplot.py  snapshot.py  tds.py
esme/control/: __init__.py  blms.py  channels.py  configs.py  dint.py  dispersion.py  exceptions.py  imanal.py  kickers.py  lattice.py  machines.py  mint.py  mstate.py  optics.py  pattern.py  sbunches.py  scanner.py  screens.py  snapshot.py  target.py  taskomat.py  tds.py  vdint.py  vmint.py
esme/gui/: __init__.py  area.py  calibrate_tds.py  calibration.py  calibrator.py  caltable.py  common.py  defaultconf.yaml  defaultconf.yml  explorer.py  gui.py  high_res_espread.py  hires.py  indicator.py  lps.py  mpl_widget.py  old_gui.py  quickcal.py  result.py  sbunchpanel.py  scannerconf.py  scannerpanel.py  screen.py  status.py  tds.py  tds_calibrator.py  vmachine.yaml  workers.py
esme/gui/ui/: __init__.py  area.py  area.ui  calibration.py  calibration.ui  calibration_infobox.py  calibration_infobox.ui  calibrator.py  calibrator.ui  current.py  current.ui  dispersion.py  dispersion.ui  dispersion_panel.py  dispersion_panel.ui  dispersion_pannel.py  dispersion_window.py  dispersion_window.ui  esme_window.py  esme_window.ui  explorer.py  explorer.ui  generate_ui  imaging.py  imaging.ui  lps-mainwindow.py  lps.py  lps.ui  mainwindow.py  mainwindow.ui  measurer.py  optics.py  optics.ui  quickcal.py  quickcal.ui  scan_results.py  scan_results.ui  scanner-config.py  scanner.py  scanner.ui  (+16 more)
esme/gui/widgets/: ._defaultconf.yaml  area.py  blm.py  common.py  core.py  current.py  defaultconf.yaml  imaging.py  mpl_widget.py  result.py  sbunchpanel.py  scannerpanel.py  screen.py  sequence.py  slice.py  stack.py  status.py  table.py  target.py  tds.py  tdsinfobox.py  tdsmini.py  vmachine.yaml
esme/hires/: analysis.py  data.py  fileio.py
esme/mint/: devices.py  interface.py  machine.py  snapshot.py  xfel_interface.py
esme/sections/: b2d.py  i1.py  i1d.py  l1.py  l2.py  sections.py
tests/: __init__.py  calibration_test.py  configs_test.py  conftest.py  dint_test.py  dispersion_test.py  esme_test.py  kickers_test.py  live_reads.py  machines_test.py  measurement_test.py  pattern_test.py  sbunches_test.py  scanner_test.py  screens_test.py  tds_test.py  test_esme.py  test_measurement.py  test_tds.py
tests/integration/: calculate_energy_spread_test.py  discrete-conf.toml  igor-conf.toml
