[tool]
[tool.poetry]
name = "esme-xfel"
version = "0.1.0"
homepage = "https://github.com/st-walker/esme-xfel"
description = "Automatic calibration, data taking and analysis for uncorrelated energy spread measurements at the EuXFEL."
authors = ["Stuart Walker <stuart.walker@desy.de>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "esme" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9.7,<4.0"
click = "8.0.1"

black  = { version = ">=21.5b2", optional = true}
isort  = { version = ">=5.8.0", optional = true}
flake8  = { version = ">=3.9.2", optional = true}
flake8-docstrings = { version = ">=1.6.0", optional = true }
mypy = {version = ">=0.900", optional = true}
pytest  = { version = ">=6.2.4", optional = true}
pytest-cov  = { version = ">=2.12.0", optional = true}
pytest-integration = { version = "~0.2", optional = true}
tox  = { version = ">=3.20.1", optional = true}
virtualenv  = { version = ">=20.2.2", optional = true}
pip  = { version = ">=20.3.1", optional = true}
mkdocs  = { version = ">=1.1.2", optional = true}
mkdocs-include-markdown-plugin  = { version = ">=1.0.0", optional = true}
mkdocs-material  = { version = ">=6.1.7", optional = true}
mkdocstrings  = { version = ">=0.15.2", optional = true}
mkdocs-material-extensions  = { version = ">=1.0.1", optional = true}
twine  = { version = ">=3.3.0", optional = true}
mkdocs-autorefs = {version = ">=0.2.1", optional = true}
pre-commit = {version = ">=2.12.0", optional = true}
toml = {version = ">=0.10.2", optional = true}
bump2version = {version = ">=1.0.1", optional = true}
matplotlib = ">=3.6.2"
pyqtgraph = "~=0.13.2"
PyYAML = "~=6.0"
numba = "~0.57"
tabulate = "~0.9.0"
pandas = "~1.5.1"
scipy = "~=1.9.3"
opencv-python = ">=4.8.1.78"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extensions",
    "mkdocs-autorefs"
    ]

[tool.poetry.scripts]
esme = 'esme.cli:main'
lpsgui = 'esme.gui.gui:start_gui'
tdsc = 'esme.gui.calibrator:main'
hires = 'esme.gui.hires:start_hires_gui'

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | bin
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

# [tool.flake8]
# max-line-length = 88
# max-complexity = 18
# ignore = ["E203", "E266", "W503"]
# docstring-convention = "numpy"
# per-file-ignores = "__init__.py:F401"
# exclude = [
# ".git",
# "__pycache__",
# "setup.py",
# "build",
# "dist",
# "docs",
# "releases",
# ".venv",
# ".tox",
# ".mypy_cache",
# ".pytest_cache",
# ".vscode",
# ".github"]
# # By default test codes will be linted.
# # tests
