[tool.poetry]
name = "esme"
version = "0.2.0"
description = "Phase space measurements at the EuXFEL: GUIs and offline analysis"
authors = ["Stuart Walker <stuart.walker@desy.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/st-walker/esme"
repository = "https://github.com/st-walker/esme"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pandas = "^2.2.1"
scipy = "^1.12.0"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"
toml = "^0.10.2"
PyYAML = "^6.0.1"
tabulate = "^0.9.0"
numba = "^0.59.1"
numpy = "^1.26.4"
PyQt5 = "^5.15.10"
pyqtgraph = "^0.13.4"
ocelot-desy = "^24.3.0"
uncertainties = "^3.1.7"
oxfel = "~0.5.0"


[tool.poetry.scripts]
esme = "esme.cli:main"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# Debugging
ipdb = {version = "*", optional = true}
ipython = {version = "*", optional = true}

# Poetry specific bits
poetry-bumpversion = {version = "*", optional = true}


# Testing
pytest = {version = "^8.1.1", optional = true}
pytest-cov = {version = "^5.0.0", optional = true}

# Type stubs
PyQt5-stubs = {version = "*", optional = true}
opencv-stubs = {version = "*", optional = true}
types-tabulate = {version = "*", optional = true}
types-PyYAML = {version = "*", optional = true}
types-toml = {version = "*", optional = true}

# For sorting imports automatically.
isort = {version = "*", optional = true}
# Type checking
mypy = {version = "^1.9.0", optional = true}
# Formatting
black = {version = "^24.3.0", optional = true}


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-include-markdown-plugin = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
pymdown-extensions = "*"

[tool.mypy]
# This doesn't seem to work?
mypy_path = "$MYPY_CONFIG_FILE_DIR/esme/stubs"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
